Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71195

qmlscene segfaults when many Rectangles are added

    XMLWordPrintable

Details

    • Linux/X11
    • 0e87966c8f815269b770a0a31974e0cd5b8ab26e (qt/qtdeclarative/5.12)

    Description

      I'm making a project with many rectangles as pixels. When I reach a maximum amount of rectangles (~2500) adding a single extra one (regardless of which Rectangle object is added) results in a segmentation fault.

      qmlscene: malloc.c:2401: sysmalloc: Assertion `(old_top == initial_top (av) && old_size == 0) || ((unsigned long) (old_size) >= MINSIZE && prev_inuse (old_top) && ((unsigned long) old_end & (pagesize - 1)) == 0)' failed.
      Aborted (core dumped)

      Update: I made a qml file with a rectangle with exactly 2049 rectangles + 1 commented out rectangle called last_straw at the top. If I uncomment it I get the segmentation fault. I don't oddly get the above message that I do in my regular code but the problem is reproducible with the below file.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vitaly.fanaskov Vitaly Fanaskov
            frostedcookies Vi An
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes